--- a/wyd/Info.plist
+++ b/wyd/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.0.1</string>
+	<string>1.0.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -25,7 +25,7 @@
 	<key>MGLMapboxAccessToken</key>
 	<string>pk.eyJ1IjoiamVsbHVsIiwiYSI6ImNqazkyOHNrZjFmdzMzcHFvajBnZWJieGwifQ.nirymf6imzJzEH4CoFrUFg</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Press &apos;Allow&apos; to enable Location Services for Motive</string>
+	<string>Your location will not be visible to anyone else or recorded by Motive. Your location is only used to load Motives near you.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Press &apos;Allow&apos; to enable Motive to access your Photos</string>
 	<key>UIAppFonts</key>
