--- a/wyd/Info.plist
+++ b/wyd/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0</string>
+	<string>1.0.2</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -27,7 +27,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Your location will not be visible to anyone else or recorded by Motive. Your location is only used to load Motives near you.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Press &apos;Allow&apos; to enable Motive to access your Photos to add a profile picture to your profile. </string>
+	<string>Press 'Allow' to enable Motive to access your Photos to add a profile picture to your profile. </string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>KGInimitableOriginal.ttf</string>
